--- a/style.css
+++ b/style.css
@@ -107,8 +107,8 @@ body{
     align-items: center;
     justify-content: space-between;
     padding:5px 10px;
-    border-style: solid;
-    border-color: #ededed;
+    border-bottom-style: solid;
+    border-bottom-color: #ededed;
     position: fixed;
     z-index: 1000;
     width: 99%;
